--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./assets-proyecto1/fonts/poppins/poppins.css">
     <script src="https://unpkg.com/ionicons@latest/dist/ionicons.js"></script>
     <!--Hoja de estilos-->
+    <link rel="stylesheet" href="./assets-proyecto1/css/reset.css">
     <link rel="stylesheet" href="./assets-proyecto1/css/styles.css">
     <title>Portafolio - Reynaldo Castaño</title>
 </head>
