Adding information in Main HTML with proper Styles for landing page

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <main class="contenido__principal">
             <section class="contenido__pagina">
                <h1 class="pagina__nombre">Reynaldo Castaño</h1> 
-               <h2 class="pagina__job">Desarrollador Web Frontend</h2>
+               <h2 class="pagina__job">Desarrollador Web</h2>
             </section>
         </main>
     </div>
