Adding about me section, styles to about me section, personalized scroll and efects in navigation menu

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <nav class="info-Usuario__menu">
                     <ul class="menu__lista">
                         <li class="menu__opcion">
-                            <a href="index.html" class="menu__link">
+                            <a href="index.html" class="menu__link menu__link--active">
                                 <i class="menu__icono fa-solid fa-house"></i>
                                 <span class="menu__overlay">Inicio</span>
                             </a>
